--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -8,6 +8,10 @@
       "es": "الإسبانية"
     }
   },
+  "navigation": {
+    "back": "العودة",
+    "edit": "تعديل الإجابات"
+  },
   "progress": {
     "level": "المستوى {{level}}",
     "xp": "{{xp}} نقطة",
