--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,6 +8,10 @@
       "es": "Spanish"
     }
   },
+  "navigation": {
+    "back": "Go Back",
+    "edit": "Edit Answers"
+  },
   "progress": {
     "level": "Level {{level}}",
     "xp": "{{xp}} XP",
