--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -132,7 +132,11 @@
     "sections": {
       "universities": "🏛️ أبرز الجامعات",
       "scholarships": "💰 أفضل المنح",
-      "resources": "🛠️ موارد مفيدة"
+      "resources": "🛠️ موارد مفيدة",
+      "timeline": "📅 خارطة الطريق",
+      "sopOutline": "📝 مخطط خطاب الدافع",
+      "competitiveness": "🎯 التنافسية",
+      "costs": "💰 التكاليف التقديرية"
     },
     "universities": {
       "match": "تطابق {{value}}"
@@ -150,6 +154,15 @@
       "resume": "منشئو السيرة الذاتية",
       "testPrep": "التحضير للاختبارات",
       "forums": "منتديات الطلاب"
+    },
+    "insights": {
+      "gpaRating": "تقييم المعدل (GPA): {{rating}}"
+    },
+    "costs": {
+      "applicationFees": "رسوم التقديم: {{value}}",
+      "testFees": "رسوم الاختبارات: {{value}}",
+      "visaFees": "رسوم التأشيرة: {{value}}",
+      "totalEstimate": "إجمالي التكلفة التقديرية: {{value}}"
     },
     "actions": {
       "title": "هل أنت مستعد للمهمة التالية؟",
